# PbrEngine

./: Cargo.toml  README.md  world.json
src/core/: camera.rs  defs.rs  geometry.rs  material.rs  mod.rs  object.rs  primitives.rs  scene.rs
src/core/renderer/: mod.rs  partitioned_buffer.rs  pixel_buffer.rs  render.rs  renderer_buffer.rs
