[package]
name = "pbr"
version = "0.1.0"
authors = ["bedna <bedna.bedna@gmail.com>"]
edition = "2018"



[dependencies]
overload = "0.1.1"
image = "0.23.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
rayon = "1.4.0"
ctrlc = { version = "3.1.6", features = ["termination"] }
piston = "0.52.0"
piston2d-graphics = "0.37.0"
piston_window = "0.112.0"
piston2d-opengl_graphics = "0.74.0"
libc = "0.2.76"
bitflags = "1.2.1"